read only filesystem support

--- a/default.html
+++ b/default.html
@@ -40,6 +40,8 @@
 
     <p>See served page on <strong>http://localhost:8888/</strong></p>
 
+    <p>If you want to see how to run it as <strong>read only root file system</strong> check:  <a href="https://github.com/miob-miob/docker-base64-html-server/blob/master/_dev_script.sh#L7">example on github</a></p>
+
 
 </div>
 </body>
